java: faster random vertex and hierarchical graph construction